--- a/NmyBlog.DAL/NmyBlog.DAL.csproj
+++ b/NmyBlog.DAL/NmyBlog.DAL.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NmyBlog.Model\NmyBlog.Model.csproj" />
+  </ItemGroup>
+
 </Project>
