2019年4月17日 缺分页 首页天数

--- a/NmyBlog.Web/appsettings.json
+++ b/NmyBlog.Web/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnStr": "server=39.108.85.11;user id=root;password=Lsb@1972;database=nmyuan",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
