2019年4月17日 mssql完成 差分页和首页时间

--- a/NmyBlog.Web/appsettings.json
+++ b/NmyBlog.Web/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "ConnStr": "server=39.108.85.11;user id=root;password=Lsb@1972;database=nmyuan",
+  //"ConnStr": "server=39.108.85.11;user id=root;password=Lsb@1972;database=nmyuan",
+  //"ConnStr": "Data Source=.;Initial Catalog=NMY_DB;User ID=sa;Password=sa",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
